rpmsg: adding remote daemon driver
rdaemon uses a simple implementation of rpmsg to communicate
with a remotecore that instantiates the RTSC rdaemon library.

--- a/drivers/staging/Kconfig
+++ b/drivers/staging/Kconfig
@@ -136,4 +136,6 @@ source "drivers/staging/thermal_framework/Kconfig"
 
 source "drivers/staging/omapdce/Kconfig"
 
+source "drivers/staging/rdaemon/Kconfig"
+
 endif # STAGING
