--- a/debian.master/d-i/kernel-versions.in
+++ b/debian.master/d-i/kernel-versions.in
@@ -9,8 +9,9 @@ i386	PKGVER-ABINUM	virtual		PKGVER-ABINUM-virtual		-
 armel	PKGVER-ABINUM	omap		PKGVER-ABINUM-omap		-
 
 armhf	PKGVER-ABINUM	omap		PKGVER-ABINUM-omap		-
+armhf	PKGVER-ABINUM	highbank	PKGVER-ABINUM-highbank		-
 
 # Ports
 # arch	version		flavour		installedname			suffix	bdep
-powerpc	PKGVER-ABINUM	powerpc			PKGVER-ABINUM-powerpc		-	
+powerpc	PKGVER-ABINUM	powerpc-smp			PKGVER-ABINUM-powerpc-smp		-	
 powerpc	PKGVER-ABINUM	powerpc64-smp		PKGVER-ABINUM-powerpc64-smp	-	
