--- a/debian/rules
+++ b/debian/rules
@@ -82,6 +82,7 @@ include $(DROOT)/rules.d/3-binary-indep.mk
 include $(DROOT)/rules.d/4-checks.mk
 
 # Misc stuff
+.PHONY: $(DEBIAN)/control.stub
 $(DEBIAN)/control.stub: $(DEBIAN)/d-i/kernel-versions.in	\
 		$(DROOT)/scripts/control-create		\
 		$(DEBIAN)/control.stub.in			\
@@ -92,6 +93,7 @@ $(DEBIAN)/control.stub: $(DEBIAN)/d-i/kernel-versions.in	\
 	  cat $$i | sed -e 's/PKGVER/$(release)/g'                              \
 	        -e 's/ABINUM/$(abinum)/g'                                       \
 		-e 's/SRCPKGNAME/$(src_pkg_name)/g'                             \
+		-e 's/=HUMAN=/$(human_arch)/g'                                    \
 	  > $$new;								\
 	done
 	flavours="$(wildcard $(DEBIAN)/control.d/vars.* $(DEBIAN)/sub-flavours/*.vars)";\
@@ -100,6 +102,7 @@ $(DEBIAN)/control.stub: $(DEBIAN)/d-i/kernel-versions.in	\
 		sed -e 's/PKGVER/$(release)/g'                                  \
 		-e 's/ABINUM/$(abinum)/g'                                       \
 		-e 's/SRCPKGNAME/$(src_pkg_name)/g'                             \
+		-e 's/=HUMAN=/$(human_arch)/g'                                    \
 		>> $(DEBIAN)/control.stub;						\
 	done
 	cp $(DEBIAN)/control.stub $(DEBIAN)/control
