--- a/arch/arm/configs/omap4plus_defconfig
+++ b/arch/arm/configs/omap4plus_defconfig
@@ -178,6 +178,7 @@ CONFIG_HIDRAW=y
 CONFIG_USB_HIDDEV=y
 CONFIG_HID_APPLE=y
 CONFIG_USB=y
+CONFIG_USB_SUSPEND=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 CONFIG_USB_DWC3=m
 CONFIG_USB_XHCI_HCD=y
