UBUNTU: Config: update off config
Signed-off-by: Xavier Boudet <x-boudet@ti.com>

--- a/arch/arm/configs/omap4plus_off_defconfig
+++ b/arch/arm/configs/omap4plus_off_defconfig
@@ -21,6 +21,7 @@ CONFIG_EFI_PARTITION=y
 CONFIG_ARCH_OMAP=y
 CONFIG_GPIO_PCA953X=y
 CONFIG_OMAP_SMARTREFLEX=y
+CONFIG_OMAP_SMARTREFLEX_CLASS1P5=y
 CONFIG_OMAP_RESET_CLOCKS=y
 CONFIG_OMAP5_SEVM_PALMAS=y
 CONFIG_OMAP_MUX_DEBUG=y
@@ -178,6 +179,7 @@ CONFIG_HIDRAW=y
 CONFIG_USB_HIDDEV=y
 CONFIG_HID_APPLE=y
 CONFIG_USB=y
+CONFIG_USB_SUSPEND=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 CONFIG_USB_DWC3=m
 CONFIG_USB_XHCI_HCD=y
@@ -213,8 +215,8 @@ CONFIG_DRM_OMAP_DCE=m
 CONFIG_HWSPINLOCK_OMAP=y
 CONFIG_OMAP_IOMMU=y
 CONFIG_OMAP_IOVMM=y
-CONFIG_OMAP_REMOTEPROC_IPU=y
-CONFIG_OMAP_REMOTEPROC_DSP=y
+#CONFIG_OMAP_REMOTEPROC_IPU=y
+#CONFIG_OMAP_REMOTEPROC_DSP=y
 CONFIG_OMAP_RPMSG_RESMGR=m
 CONFIG_RPMSG_OMX=m
 CONFIG_VIRT_DRIVERS=y
